--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li class="nav-item">
           <a class="nav-link ">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <img style="width: 180%;" src="../assets/img/rascacielos.png"></i>
+              <img style="width: 180%;" src="./rascacielos.png"></i>
             </div>
             <span class="nav-link-text ms-1">Ciudad</span>
           </a>
