--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li class="nav-item">
           <a class="nav-link ">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <img style="width: 180%;" src="../assets/img/choque.png"></i>
+              <img style="width: 180%;" src="./choque.png"></i>
             </div>
             <span class="nav-link-text ms-1">Accidentes</span>
           </a>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape shadow-primary text-center rounded-circle" style="background-color: rgb(255, 165, 0);">
-                    <img style="width: 80%;" src="../assets/img/choque.png"></i>
+                    <img style="width: 80%;" src="./choque.png"></i>
                   </div>
                 </div>
               </div>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape shadow-danger text-center rounded-circle" style="background-color: rgb(255, 165, 0);">
-                    <img style="width: 80%;" src="../assets/img/aumento.png"></i>
+                    <img style="width: 80%;" src="./aumento.png"></i>
                   </div>
                 </div>
               </div>
