--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape shadow-danger text-center rounded-circle" style="background-color: rgb(255, 165, 0);">
-                    <img style="width: 80%;" src="./aumento.png"></i>
+                   <img style="width: 80%;" src="./choque.png"></i>
                   </div>
                 </div>
               </div>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape shadow-success text-center rounded-circle" style="background-color: rgb(255, 165, 0);">
-                    <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+                    <img style="width: 80%;" src="./choque.png"></i>
                   </div>
                 </div>
               </div>
@@ -321,7 +321,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape bg-gradient-warning shadow-warning text-center rounded-circle">
-                    <img style="width: 60%; margin-top:20%;" src="./disminucion .png"></i>
+                    <img style="width: 80%;" src="./choque.png"></i>
                   </div>
                 </div>
               </div>
