--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     </div>
                     <div class="d-flex flex-column">
                       <h6 class="mb-1 text-dark text-sm">Auto -Auto</h6>
-                      <span class="text-xs">250 in stock, <span class="font-weight-bold">346+ sold</span></span>
+                      <span class="text-xs">5<span class="font-weight-bold"></span></span>
                     </div>
                   </div>
                   <div class="d-flex">
@@ -504,7 +504,7 @@
                     </div>
                     <div class="d-flex flex-column">
                       <h6 class="mb-1 text-dark text-sm">Moto - Peaton</h6>
-                      <span class="text-xs">123 closed, <span class="font-weight-bold">15 open</span></span>
+                      <span class="text-xs">2<span class="font-weight-bold"></span></span>
                     </div>
                   </div>
                   <div class="d-flex">
@@ -518,7 +518,7 @@
                     </div>
                     <div class="d-flex flex-column">
                       <h6 class="mb-1 text-dark text-sm">Auto - Moto</h6>
-                      <span class="text-xs">1 is active, <span class="font-weight-bold">40 closed</span></span>
+                      <span class="text-xs">7<span class="font-weight-bold"></span></span>
                     </div>
                   </div>
                   <div class="d-flex">
@@ -532,7 +532,7 @@
                     </div>
                     <div class="d-flex flex-column">
                       <h6 class="mb-1 text-dark text-sm">Auto - Peaton</h6>
-                      <span class="text-xs font-weight-bold">+ 430</span>
+                     <span class="text-xs">7<span class="font-weight-bold"></span></span>
                     </div>
                   </div>
                   <div class="d-flex">
