--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <div class="icon icon-shape bg-gradient-warning shadow-warning text-center rounded-circle">
-                    <img style="width: 80%;" src="./choque.png"></i>
+                    <img style="width: 80%;" src="./disminucion .png"></i>
                   </div>
                 </div>
               </div>
